--- a/sign_up_hall.html
+++ b/sign_up_hall.html
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
             <div class="freshdesignweb-top">
-                <a href="" target="_blank">Home</a>
+                <a href="home_process.php" target="_blank">Home</a>
                 <span class="right">
 
                 </span>
